src/objects/Case_Asset__c.object
<CustomObject>
    <description>Junction object to allow association of more than one Asset record on a Case.</description>
    <fields>
        <fullName>Active_Tag_old__c</fullName>
        <formula>Asset__r.Active_Tag__c</formula>
        <inlineHelpText>Editable Tag on the Asset record.</inlineHelpText>
        <label>Active Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Assets</relationshipLabel>
        <relationshipName>Case_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <formula>Case__r.ClosedDate</formula>
        <label>Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Contact__c</fullName>
        <formula>Case__r.Contact.FirstName + &quot; &quot; +  Case__r.Contact.LastName + &quot; (&quot; +  Case__r.Contact.Account.Name  + &quot;)&quot;</formula>
        <label>Case Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Opened_Date__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <label>Case Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status_Simple__c</fullName>
        <formula>Text(Case__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>Text(Case__r.Status) + BR() + &quot;Opened Date: &quot; + Text(Case__r.CreatedDate) + BR() + &quot;Closed Date: &quot; +  Text(Case__r.ClosedDate)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Assets</relationshipLabel>
        <relationshipName>Case_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Failure_Category_Cause__c</fullName>
        <formula>Text(Failure_Category__c) &amp; &quot; - &quot; &amp; Text(Failure_Cause__c)</formula>
        <label>Failure Category/Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Category__c</fullName>
        <label>Failure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Blower Assembly</fullName>
                </value>
                <value>
                    <fullName>Cabinetry</fullName>
                </value>
                <value>
                    <fullName>Commissioning Start-Up Assist</fullName>
                </value>
                <value>
                    <fullName>Compressor</fullName>
                </value>
                <value>
                    <fullName>Condenser</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Evaporator</fullName>
                </value>
                <value>
                    <fullName>Hydronic Coil</fullName>
                </value>
                <value>
                    <fullName>Intelligent Equipment</fullName>
                </value>
                <value>
                    <fullName>Jobsite</fullName>
                </value>
                <value>
                    <fullName>Leaks</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Refrigeration Circuit</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Unit Controller</fullName>
                </value>
                <value>
                    <fullName>Unit Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Cause__c</fullName>
        <label>Failure Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Actuator F&amp;BP</fullName>
                </value>
                <value>
                    <fullName>Actuators OA/RA</fullName>
                </value>
                <value>
                    <fullName>Airflow</fullName>
                </value>
                <value>
                    <fullName>Air Leaks</fullName>
                </value>
                <value>
                    <fullName>Alignment/Fitup</fullName>
                </value>
                <value>
                    <fullName>Analysis/Investigation</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Assembly questions</fullName>
                </value>
                <value>
                    <fullName>Assign Users</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BCM Program</fullName>
                </value>
                <value>
                    <fullName>Bearing</fullName>
                </value>
                <value>
                    <fullName>Boiler/Tower</fullName>
                </value>
                <value>
                    <fullName>BOM questions</fullName>
                </value>
                <value>
                    <fullName>Boost Fan</fullName>
                </value>
                <value>
                    <fullName>Capacity issue</fullName>
                </value>
                <value>
                    <fullName>Capillary Tube</fullName>
                </value>
                <value>
                    <fullName>Cloud communication issues</fullName>
                </value>
                <value>
                    <fullName>CO2 Sensor</fullName>
                </value>
                <value>
                    <fullName>Coil Failure</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Conference with Controls</fullName>
                </value>
                <value>
                    <fullName>Control Card Failure</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Controller Setup</fullName>
                </value>
                <value>
                    <fullName>Controller setup/Network</fullName>
                </value>
                <value>
                    <fullName>Cooling/heating issue</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DDC Controller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GO_Line_Number__c</fullName>
        <formula>Asset__r.GO_Line_Number__c</formula>
        <label>GO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Number__c</fullName>
        <formula>Asset__r.GO_Number__c</formula>
        <label>GO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <inlineHelpText>Job Name from the Order associated with this Asset.</inlineHelpText>
        <label>Job Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCL_Group__c</fullName>
        <label>PCL Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <description>Being populated with the value in Product.DW_Product_Class by a workflow rule. Original purpose for reporting of Cases by Product to Kirk T.</description>
        <label>Product Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Line_Number__c</fullName>
        <formula>Asset__r.SO_Line_Number__c</formula>
        <label>SO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <inlineHelpText>SO # associated to this Asset.</inlineHelpText>
        <label>SO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office__c</fullName>
        <formula>Asset__r.Selling_Rep_Office__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Rep Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRC_Group_text__c</fullName>
        <label>TRC Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Case Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Case Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>